Update Ansible and Terraform configurations for DigitalOcean setup
- Change inventory file path in ansible.cfg
- Update SSH private key path in inventory.yml.tpl
- Add tasks to create HTML directory and index.html in main.yml
- Update repository references in ansible-stack.tf and terraform-stack.tf
- Rename environment variable in context.tf for consistency
- Add SSH fingerprint environment variable in context.tf
- Add zsh package installation in digitalocean.tftpl
- Change droplet name variable in main.tf and add new variable for droplet name
- Update output path for Ansible inventory in outputs.tf

--- a/ansible/inventory/ansible.cfg
+++ b/ansible/inventory/ansible.cfg
@@ -1,6 +1,6 @@
 # ansible/inventory/ansible.cfg
 [defaults]
-inventory = ./inventory/hosts.yml
+inventory = ./inventory/inventory.yml
 remote_user = ansible
 host_key_checking = False
 roles_path = ./roles
