--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,6 +4,7 @@ inventory = ./inventory/inventory.yml
 remote_user = ansible
 host_key_checking = False
 roles_path = ./roles
+timeout = 30
 
 [ssh_connection]
 pipelining = True
