Refactor Ansible inventory management: remove obsolete inventory template file, update setup playbook to use absolute paths for roles, and create a new inventory template file with correct structure.

--- a/ansible/playbooks/setup.yml
+++ b/ansible/playbooks/setup.yml
@@ -4,7 +4,12 @@
   hosts: webservers
   become: true
   
+  # Define variables for role paths
+  vars:
+    roles_base_path: "/mnt/workspace/source/ansible/roles"
+  
+  # Use absolute paths for roles
   roles:
-    - common
-    - docker
-    - app
+    - { role: "{{ roles_base_path }}/common" }
+    - { role: "{{ roles_base_path }}/docker" }
+    - { role: "{{ roles_base_path }}/app" }
