--- a/ansible/inventory/inventory.yml
+++ b/ansible/inventory/inventory.yml
@@ -7,3 +7,5 @@ all:
       hosts:
         localhost:
           ansible_connection: local
+          ansible_python_interpreter: /usr/bin/python3
+          ansible_become: false
